--- a/ProjectDashboard/test-output/old/Default suite/methods.html
+++ b/ProjectDashboard/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d3bc82">  <td>23/03/15 10:50:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="roleAccess$PimsAdmin.LoginTest()[pri:1, instance:testcase.roleAccess$PimsAdmin@6572421]">LoginTest</td> 
+<tr bgcolor="7d9dab">  <td>23/04/12 14:34:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="rolePunchlistProduction$PimsAdmin.rfiFullControl()[pri:2, instance:testcase.rolePunchlistProduction$PimsAdmin@6c64cb25]">rfiFullControl</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/03/15 10:50:56</td>   <td>16817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="roleAccess$PimsAdmin.switchingPims()[pri:2, instance:testcase.roleAccess$PimsAdmin@6572421]">switchingPims</td> 
+<tr bgcolor="7d9dab">  <td>23/04/12 14:34:34</td>   <td>-19084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="rolePunchlistProduction$PimsAdmin.LoginTest()[pri:1, instance:testcase.rolePunchlistProduction$PimsAdmin@6c64cb25]">LoginTest</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="f56bcc">  <td>23/03/15 10:50:33</td>   <td>-6691</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:testcase.roleAccess$PimsAdmin@6572421]">&gt;&gt;setUp</td> 
+<tr bgcolor="7d9dab">  <td>23/04/12 14:35:07</td>   <td>14132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="rolePunchlistProduction$PimsAdmin.rfiRead()[pri:3, instance:testcase.rolePunchlistProduction$PimsAdmin@6c64cb25]">rfiRead</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>23/04/12 14:35:21</td>   <td>27389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="rolePunchlistProduction$PimsAdmin.rfiAdd()[pri:4, instance:testcase.rolePunchlistProduction$PimsAdmin@6c64cb25]">rfiAdd</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="a6ba85">  <td>23/04/12 14:34:27</td>   <td>-26604</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:testcase.rolePunchlistProduction$PimsAdmin@6c64cb25]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="7d9dab">  <td>23/04/12 14:35:33</td>   <td>39997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="rolePunchlistProduction$PimsAdmin.rfiDeny()[pri:5, instance:testcase.rolePunchlistProduction$PimsAdmin@6c64cb25]">rfiDeny</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
 </table>
