--- a/ProjectDashboard/test-output/emailable-report.html
+++ b/ProjectDashboard/test-output/emailable-report.html
@@ -8,12 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">50,130</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">92,775</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcase.roleAccess$PimsAdmin</td><td><a href="#m0">LoginTest</a></td><td rowspan="1">1678910925885</td><td rowspan="1">19059</td></tr><tr class="passedeven"><td><a href="#m1">switchingPims</a></td><td rowspan="1">1678910944948</td><td rowspan="1">25344</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">testcase.rolePunchlistProduction$PimsAdmin</td><td><a href="#m0">LoginTest</a></td><td rowspan="1">1681324474646</td><td rowspan="1">19076</td></tr><tr class="passedeven"><td><a href="#m1">rfiAdd</a></td><td rowspan="1">1681324521119</td><td rowspan="1">12606</td></tr><tr class="passedeven"><td><a href="#m2">rfiDeny</a></td><td rowspan="1">1681324533727</td><td rowspan="1">26165</td></tr><tr class="passedeven"><td><a href="#m3">rfiFullControl</a></td><td rowspan="1">1681324493730</td><td rowspan="1">14130</td></tr><tr class="passedeven"><td><a href="#m4">rfiRead</a></td><td rowspan="1">1681324507862</td><td rowspan="1">13255</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">testcase.roleAccess$PimsAdmin#LoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testcase.roleAccess$PimsAdmin#switchingPims</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testcase.rolePunchlistProduction$PimsAdmin#LoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testcase.rolePunchlistProduction$PimsAdmin#rfiAdd</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testcase.rolePunchlistProduction$PimsAdmin#rfiDeny</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testcase.rolePunchlistProduction$PimsAdmin#rfiFullControl</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testcase.rolePunchlistProduction$PimsAdmin#rfiRead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
